# ssd-tpu-

./: .env copy.example  .env.example  .gitignore  README.md  pyproject.toml
connect/: __init__.py  config.py  diagnostics.py  gcs_storage.py  mesh_allocator.py  multislice.py  profiles.py  slice_probe.py  ssh_tunnel.py
docs/: algorithms.md  architecture.md  benchmarking.md  tpu_connect.md  tpu_regions.md  vm_commands.md  vm_connect.md
jax_ssd/: __init__.py  config.py  llm.py  sampling_params.py
jax_ssd/algorithm/: __init__.py  (+5 more)
scripts/: bootstrap_vm.sh  check_vm_deps.py  commit_all_files.ps1  connect_ssh.ps1  connect_vm.ps1  connect_vm.sh  diagnose_hf_token.py  download_datasets.py  download_gemma.sh  download_models.py  find_tf_compat.py  fix_vm_gemma4.sh  gemma4_easydel_smoke.py  gemma4_pytorch_smoke.py  inspect_auto.py  inspect_easydel311.py  inspect_easydel_api.py  inspect_elm.py  inspect_vinf.py  inspect_vsurge.py  launch_overnight.sh  list_tpu_capacity.ps1  load_env.ps1  overnight_gemma4.sh  provision_dual_8.ps1  provision_dual_8.sh  provision_tpu.ps1  provision_tpu.sh  push_hf_token.ps1  push_hf_token.py  recover_tpu_install.sh  restore_gemma4_from_gcs.sh  run_gemma4_vm.sh  setup_gcs.ps1  setup_gcs.sh  setup_py311_easydel.sh  setup_tpu_vm.sh  snapshot_gemma4_to_gcs.sh  start_overnight_on_vm.ps1  stop_gemma4_vm.sh  (+9 more)
tests/: conftest.py  test_engine_modes.py  test_instance_prior.py  test_mesh_allocator.py  test_page_rollback.py  test_real_gemma_tpu.py  test_spec_cache.py  test_verify_parity.py
tui/: __init__.py  app.py  panels.py  theme.py  token_anim.py
(+33 files in other folders)
